<resources>
    <string name="app_name">assignment 2 gamE</string>
    <string name="welcome_to_whisker_kingdom">WELCOME TO WHISKER KINGDOM</string>
    <string name="start_game">Start Game</string>
    <string name="todo">TODO</string>
    <string name="feed">feed</string>
    <string name="clean">clean</string>
    <string name="play">play</string>
    <string name="hungry_8">Hungry 8</string>
    <string name="play_4">Play 4</string>
    <string name="clean_5">Clean 5</string>
    <string name="hungry2">Hungry</string>
    <string name="clean2">Clean</string>
    <string name="play2">Play</string>
    <string name="_7">7</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_8">8</string>
    <string name="_51">5</string>
    <string name="_81">8</string>
    <string name="_3">3</string>
    <string name="happiness">Happiness</string>
    <string name="textview">TextView</string>
</resources>