<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_game"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="317dp"
        android:layout_height="322dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="47dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/assi2_cat_front_pg"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="122dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="4dp"
        android:text="@string/feed"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="118dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="288dp"
        android:text="@string/clean"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button5"
        android:layout_width="123dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="288dp"
        android:text="@string/play"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="286dp"
        android:text="@string/hungry2"
        android:textColor="#2196F3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="149dp"
        android:layout_height="46dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="195dp"
        android:text="@string/clean2"
        android:textColor="#2196F3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="145dp"
        android:layout_height="44dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="199dp"
        android:text="@string/happiness"
        android:textColor="#2196F3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="78dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/_81"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="108dp"
        android:text="@string/_51"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="80dp"
        android:layout_height="47dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="105dp"
        android:text="@string/_3"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="241dp"
        android:layout_height="46dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="203dp"
        android:text="@string/textview"
        android:textColor="#2196F3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>